# Inertrope

./: Inertrope.py  Inetrope_README.md  README.md  environment.yml  pyproject.toml  requirement.txt
Dataset/ITC_Data/Raw_Data/: Benign_ITC.csv  Normal_ITC.csv
Dataset/Spectra_Data/Raw_Data/: Benign_SPECTRA.csv  Cancer_SPECTRA.csv  Normal_SPECTRA.csv
Normalisation/: Spectra_data_preprocessing.ipynb
Normalisation/ITC/: ITC_normalisation.py
example/: example.ipynb
