[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Inertrope"
version = "0.1.0"
description = "Tools for calorimetry data analysis and normalization."
readme = "README.md"
authors = [
  { name = "The Ahuja Lab", email = "gaurav.ahuja@iiitd.ac.in" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = [
  "numpy=1.24.4",
  "pandas=2.0.3",
  "matplotlib",
  "scipy",
  "scikit-learn=1.3.0",
  "tsfresh==0.20.3"
]

[project.urls]
Homepage = "https://github.com/the-ahuja-lab/Inertrope"
Issues = "https://github.com/the-ahuja-lab/Inertrope/issues"

[tool.setuptools]
py-modules = ["Inertrope"]


